--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
 
     <p>Brasileira, solteira, 22 anos - Brasília - DF<p>
     <a href="http://fb.com">Facebook</a> - <a href="http://github.com">Github</a> - <a href="http://twitter.com">Twitter</a>
-    <p><b>Email:</b> maria@gmail.com</p>
-    <p><b>Phone:</b> (+55)11-986993010</p>
+    <p><b>Email:</b> maryanalirius@gmail.com</p>
 
     <h3>Experiência</h3>
-    <p><i>2017/06 ~ Atual</i> - Estágiaria no Facebook - <a href="http://fb.com">Facebook.com</a></p>
+    <p><i>2017/09 ~ Atual</i> - Java Developer - <a href="http://fb.com">Facebook.com</a></p>
 
     <h3>Educação</h3>
     <p> Tecnologo em Análise e Desenvolvimento de Sistemas(<i>Cursando</i>) - IFG</p>
 
     <h3>Habilidades</h3>
     <ul>
-      <li>HTML5 / CSS3</li>
+      <li>Java / PLSQL</li>
       <li>Fazer café</li>
     </ul>
 
