--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <title>Minha Pagina</title>
 </head>
 <body>
-    <img src="http://vidadiaria.com.br/images/2017/educacao/agosto/estudante3.jpg" alt="Foto da Maria Lúcia">
+    <!--><img src="http://vidadiaria.com.br/images/2017/educacao/agosto/estudante3.jpg" alt="Foto da Maria Lúcia"> </-->
     <h1>Maryana Marinho</h1>
     <h2>Estudante de Análise e Desenvolvimento de Sistemas</h3>
 
     <p>Brasileira, solteira, 22 anos - Brasília - DF<p>
-    <a href="http://fb.com">Facebook</a> - <a href="http://github.com">Github</a> - <a href="http://twitter.com">Twitter</a>
+    <!--> <a href="http://fb.com">Facebook</a> - <a href="http://github.com">Github</a> - <a href="http://twitter.com">Twitter</a></-->
     <p><b>Email:</b> maryanalirius@gmail.com</p>
 
     <h3>Experiência</h3>
-    <p><i>2017/09 ~ Atual</i> - Java Developer - <a href="http://fb.com">Facebook.com</a></p>
+    <p><i>2017/09 ~ Atual</i> - Java Developer - <a href="http://www.cabal.com.br/pt/">Cabal Brasil</a></p>
 
     <h3>Educação</h3>
     <p> Tecnologo em Análise e Desenvolvimento de Sistemas(<i>Cursando</i>) - IFG</p>
 
     <h3>Habilidades</h3>
     <ul>
-      <li>Java / PLSQL</li>
+      <li>Java / PLSQL / jPOS / JSON / </li>
       <li>Fazer café</li>
     </ul>
 
