--- a/index.html
+++ b/index.html
@@ -6,28 +6,6 @@
 </head>
 <body>
     
-    <h1>Maryana Marinho</h1>
-    <h2>Estudante de Análise e Desenvolvimento de Sistemas</h3>
-
-    <p>Brasileira, solteira, 22 anos - Brasília - DF<p>
-   
-    <p><b>Email:</b> maryanalirius@gmail.com</p>
-
-    <h3>Experiência</h3>
-    <p><i>2017/09 ~ Atual</i> - Java Developer - <a href="http://www.cabal.com.br/pt/">Cabal Brasil</a></p>
-
-    <h3>Educação</h3>
-    <p> Tecnologo em Análise e Desenvolvimento de Sistemas(<i>Cursando</i>) - IFG</p>
-
-    <h3>Habilidades</h3>
-    <ul>
-      <li>Java / PLSQL / jPOS / JSON / </li>
-      <li>Fazer café</li>
-    </ul>
-
-    <h3>Interesses<h3>
-    <ul>
-      <li>Jogar Overwatch<i>(Sou muito ruim)</i></li>
-    </ul>
+  <h4>Em Construção....</h4>
 </body>
 </html>
