--- a/index.html
+++ b/index.html
@@ -1,11 +1,325 @@
 <!DOCTYPE html>
 <html>
-  <meta charset="utf-8">
+
 <head>
-    <title>Minha Pagina</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+		crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+		crossorigin="anonymous"></script>
+	<script type="text/javascript" src="mouse.js"></script>
+	<title>Maryana</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-    
-  <h4>Em Construção....</h4>
+	<!-- ME -->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top text-uppercase">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#42">Maryana Marinho</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+				aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+					<li class="nav-item">
+						<a class="nav-link" href="#sobre">Sobre</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#portfolio">Portfólio</a>
+					</li>
+
+
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<header class=" text-white text-center" id="42" style="background-color: #786fa6">
+		<div class="container row no-gutters" style="padding-top: 131px;">
+			<img class="img-fluid mb-5 d-block mx-auto rounded-circle col-md-4" src="./img/profile-avatar.jpeg" alt=""
+				style="max-width: 20rem;">
+			<div class="text-center col-md-8 mb-5 mx-auto">
+				<br><br>
+				<h1 class=" mb-0">Hey I am Maryana Marinho</h1>
+				<hr class="star-light">
+				<h2 class="font-weight-light mb-0">Software Developer ☕</h2>
+				<br>
+				<ul class="list-inline mb-0">
+					<li class="list-inline-item">
+						<a target="_blank" class="btn btn-outline-light btn-social text-center rounded-circle"
+							href="https://www.instagram.com/maryana.marinho/">
+							<i class="fab fa-fw fa-instagram"></i>
+						</a>
+					</li>
+					<li class="list-inline-item">
+						<a target="_blank" class="btn btn-outline-light btn-social text-center rounded-circle"
+							href="https://github.com/MaryanaMarinho">
+							<i class="fab fa-fw fa-github"></i>
+						</a>
+					</li>
+					<li class="list-inline-item">
+						<a target="_blank" class="btn btn-outline-light btn-social text-center rounded-circle"
+							href="https://www.linkedin.com/in/maryana-marinho-888442124/">
+							<i class="fab fa-fw fa-linkedin"></i>
+						</a>
+					</li>
+					<li class="list-inline-item">
+						<a target="_blank" class="btn btn-outline-light btn-social text-center rounded-circle"
+							rel="noopener noreferrer" href="mailto:maryanalirius@gmail.com">
+							<i class="fas fa-fw fa-envelope"></i>
+						</a>
+					</li>
+
+				</ul>
+			</div>
+		</div>
+	</header>
+	<!-- SOBRE -->
+	<section class="bg-light text-black mb-0" id="sobre" style="padding-top: 100px;">
+		<div class="container" style="padding-bottom: 58px;">
+			<h2 class="text-center text-uppercase text-black">Sobre</h2>
+			<hr class="star-light mb-5">
+			<div class="row">
+				<div class="col-lg-6 ml-auto">
+					<h4 class="">Formação</h4>
+					<br>
+					<p class="lead">
+						<div class="container row no-gutters">
+							<a target="_blank" href="https://www.ifg.edu.br/formosa">
+								<img class="img-fluid mb-5 d-block mx-auto col-md-4 " src="./img/logo.png" alt=""
+									style="max-width: 10rem;">
+							</a>
+
+
+							<div class=" col-md-8 mb-5 mx-auto lead">
+								<br>
+								Graduação: Tecnólogo em Análise e Desenvolvimento de Sistemas – Instituto Federal do
+								Goiás - IFG.
+								<br>
+							</div>
+						</div>
+
+						<br>
+						<p class="lead">Conhecimento nas linguagens de programação Java, JavaScript, PL/SQL, TypeScript.
+						</p>
+						<p class="lead">Conhecimento em Angular, SQL, CSS, HTML, Bootstrap, JSF, JPA, Hibernate, MVC,
+							JSON, XML,
+							REST, Maven, Spring Boot, Padrão de Projeto, jPOS, MongoDB.</p>
+						<p class="lead">Metodologia em desenvolvimento ágil: Scrum</p>
+						<p class="lead">Ferramentas utilizadas: Eclipse, IntelliJ IDEA, VSCode, APEX(Oracle Application
+							Express),
+							PostgreSQL, Astah, Git, GitHub.</p>
+					</p>
+				</div>
+				<div class="col-lg-6 mr-auto">
+					<h4 class="">Principais Conhecimentos </h4>
+					<p class="lead">
+
+						<div class="progress" style="height: 20px;">
+							<div class="progress-bar progress-bar-striped progress-bar-animated bg-dark"
+								role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+								style="width: 70%">
+								Java - 70%
+							</div>
+						</div>
+						<br>
+						<div class="progress" style="height: 20px;">
+							<div class="progress-bar progress-bar-striped progress-bar-animated bg-dark"
+								role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+								style="width: 40%">
+								JavaScript - 40%
+							</div>
+						</div>
+						<br>
+						<div class="progress" style="height: 20px;">
+							<div class="progress-bar progress-bar-striped progress-bar-animated bg-dark"
+								role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+								style="width: 70%">
+								SQL - 70%
+							</div>
+						</div>
+						<br>
+						<div class="progress" style="height: 20px;">
+							<div class="progress-bar progress-bar-striped progress-bar-animated bg-dark"
+								role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
+								style="width: 45%">
+								Spring - 45%
+							</div>
+						</div>
+						<br>
+						<div class="progress" style="height: 20px;">
+							<div class="progress-bar progress-bar-striped progress-bar-animated bg-dark"
+								role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
+								style="width: 50%">
+								REST - 50%
+							</div>
+						</div>
+						<br>
+						<div class="progress" style="height: 20px;">
+							<div class="progress-bar progress-bar-striped progress-bar-animated bg-dark"
+								role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+								style="width: 40%">
+								Angular - 40%
+							</div>
+						</div>
+						<br>
+						<div class="progress" style="height: 20px;">
+							<div class="progress-bar progress-bar-striped progress-bar-animated bg-dark"
+								role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
+								style="width: 50%">
+								JPA - 50%
+							</div>
+						</div>
+						<br>
+						<div class="progress" style="height: 20px;">
+							<div class="progress-bar progress-bar-striped progress-bar-animated bg-dark"
+								role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"
+								style="width: 65%">
+								HTML - 65%
+							</div>
+						</div>
+						<br>
+						<div class="progress" style="height: 20px;">
+							<div class="progress-bar progress-bar-striped progress-bar-animated bg-dark"
+								role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"
+								style="width: 65%">
+								CSS - 65%
+							</div>
+						</div>
+						<br>
+						<div class="progress" style="height: 20px;">
+							<div class="progress-bar progress-bar-striped progress-bar-animated bg-dark"
+								role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
+								style="width: 50%">
+								Bootstrap - 50%
+							</div>
+						</div>
+					</p>
+					<br>
+					<p>
+						<a class="btn btn-outline-dark btn-lg btn-block" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+							Cursos <i class="fas fa-award"></i>
+						</a>
+					</p>
+					<div class="collapse" id="collapseExample">
+						<div class="card card-body">
+						<dl>
+							<dt><a target="_blank" href="http://youmove.com.br/">You Move</a></dt>
+							<dd>- Inglês – Nível - Avançado</dd>
+							
+							<dt><a target="_blank" href="https://www.udemy.com/">Udemy</a></dt>
+							<dd>- Curso: API RESTful avançada com Spring Boot e Java 8, 4,5 horas.</dd>
+							<dd>- Curso: Spring Boot, Hibernate, REST, Ionic, JWT, S3, MySQL, MongoDB, cursando.</dd>
+							<dd>- Curso: Desenvolvimento WEB com ES6, TypeScript e Angular, cursando.</dd>
+
+							<dt><a target="_blank" href="https://www.alura.com.br/">Alura</a></dt>
+							<dd>- Curso: Design Patterns Java I: Boas Práticas de Programação, 20 horas.</dd>
+							<dd>- Curso: Design Patterns Java II: Boas Práticas de Programação, 20 horas.</dd>
+							<dd>- Curso: SOLID com Java: Orientação a objetos com java, 8 horas.</dd>
+							<dd>- Curso: Teste: TDD com java, 12 horas.</dd>
+
+							<dt><a target="_blank" href="https://upis.br/">Upis</a></dt>
+							<dd>- Extensão em introdução a java para web, 40 horas.</dd>
+
+							<dt><a target="_blank" href="https://loiane.training/">Loiane.training</a></dt>
+							<dd>- Curso: Angular , cursando.</dd>
+						</dl>
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+		</div>
+		<br>
+		<br>
+
+		</div>
+		</div>
+	</section>
+	<!-- PORTIFOLIO -->
+	<section class="text-white mb-0" id="portfolio" style="padding-top: 134px; background-color: #596275">
+		<div class="container" style="padding-bottom: 1px;">
+			<h2 class="text-center text-uppercase text-white">Portfólio</h2>
+			<hr class="star-light mb-5">
+			<div class="row">
+					<div class="container row no-gutters">
+						<a target="_blank" href="https://www.cabal.com.br/pt/">
+							<img class="rounded float-left col-md-3 mx-auto" src="./img/cabal.png" alt=""
+								style="float:left; max-width: 8rem; max-height: 30rem; padding-top: 80px;">
+						</a>
+
+						<div class="col-md-8 mx-auto lead">
+							<p class="lead">
+								<h6 class="lead">Cabal Brasil</h6>
+								<strong> Cargo: Programadora Java <span class=" text-monospace"> (04/09/2017 – 03/09/2018)</span>.
+								</strong><br>
+								Carga Horária: 40 horas semanais. <br>
+								Principais atividades: Desenvolvendo soluções para meios de pagamento em ambiente
+								online de transações financeiras. Desenvolvimento na linguagem java, com padrões de
+								projetos, utilizando os frameworks jPOS e jPTS, utilizados no tratamento de mensagens
+								ISO-8583, atuação na aplicação da bandeira Cabal Brasil, análise de fluxo das transações
+								financeiras com cartão de crédito, débito e voucher.</p>
+
+							<p class="lead">
+								<strong> Cargo: Estagiária de programação – 
+									Nível Superior <span class=" text-monospace">(06/02/2017 – 04/09/2017)</span>.</strong><br>
+								Carga Horária: 30 horas semanais.</p>
+						</div>
+					</div>
+
+					<div class="container row no-gutters">
+						<a target="_blank" href="https://portal.tcu.gov.br/inicio/">
+							<img class="rounded float-left col-md-3 mx-auto" src="./img/tcu.png" alt=""
+								style="float:left; max-width: 8rem; max-height: 30rem; padding-top: 80px;">
+						</a>
+
+						<div class="col-md-8 mx-auto lead">
+							<p class="lead">
+								<h6 class="lead">TCU – Tribunal de Contas da União</h6>
+								<strong> Cargo: Estagiária na Ouvidoria – Nível Superior <span class=" text-monospace"> (11/05/2015 – 05/02/2017)</span>.</strong> <br>
+								Carga Horária: 20 horas semanais. <br>
+								Principais atividades: Levantamento de requisitos, desenvolvimento de aplicações com a
+								ferramenta APEX, linguagem SQL e PL/SQL, modelagem de dados com MySQL Workbench
+								6.0 CE, documentação de aplicações, atendimento ao público usuário e prestação de
+								suporte e manutenção evolutiva da aplicação.
+								Aplicações: Sistema da SEGEPRES, Sistema da Ouvidoria.</p>
+						</div>
+					</div>
+			</div>
+
+		</div>
+		<br>
+		<br>
+		</div>
+	</section>
+	<!-- LOCAL -->
+	<footer class="footer text-center" id="contato" style="padding-top: 30px; background-color: #786fa6">
+		<div class="container">
+
+			<div class="text-center">
+				<h4 class="text-uppercase mb-4 text-white">Local</h4>
+				<p class="lead mb-0 text-white">Brasília
+					<br>Distrito Federal</p>
+			</div>
+		</div>
+		<div class="copyright py-4 text-center text-white">
+			<div class="container">
+				<small>Copyright &copy; Maryana Marinho 2019</small>
+			</div>
+		</div>
+	</footer>
 </body>
+
 </html>
