--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				style="max-width: 20rem;">
 			<div class="text-center col-md-8 mb-5 mx-auto">
 				<br><br>
-				<h1 class=" mb-0">Hey I am Maryana Marinho</h1>
+				<h1 class=" mb-0">Maryana Marinho</h1>
 				<hr class="star-light">
 				<h2 class="font-weight-light mb-0">Software Developer ☕</h2>
 				<br>
@@ -254,6 +254,25 @@
 			<h2 class="text-center text-uppercase text-white">Portfólio</h2>
 			<hr class="star-light mb-5">
 			<div class="row">
+
+				<div class="container row no-gutters">
+					<a target="_blank" href="https://www.ctis.com.br">
+						<img class="rounded float-left col-md-3 mx-auto" src="./img/logo_ctis.png" alt=""
+							style="float:left; max-width: 8rem; max-height: 30rem; padding-top: 80px;">
+					</a>
+				
+					<div class="col-md-8 mx-auto lead">
+						<p class="lead">
+							<h6 class="lead">CTIS | MCTIC - Ministério da Ciência, Tecnologia, Inovações e Comunicações</h6>
+							<strong> Cargo: Desenvolvedora de Software <span class=" text-monospace"> (19/08/2019 –
+									Atualmente)</span>.</strong> <br>
+							Carga Horária: 40 horas semanais. <br>
+							Principais atividades: Desenvolver soluções de software e automação de processos. 
+							Utilizando Java, jBPM, AngularJS, Angular.
+						</p>
+					</div>
+				</div>
+
 					<div class="container row no-gutters">
 						<a target="_blank" href="https://www.cabal.com.br/pt/">
 							<img class="rounded float-left col-md-3 mx-auto" src="./img/cabal.png" alt=""
@@ -266,7 +285,7 @@
 								<strong> Cargo: Programadora Java <span class=" text-monospace"> (04/09/2017 – 03/09/2018)</span>.
 								</strong><br>
 								Carga Horária: 40 horas semanais. <br>
-								Principais atividades: Desenvolvendo soluções para meios de pagamento em ambiente
+								Principais atividades: Desenvolver soluções para meios de pagamento em ambiente
 								online de transações financeiras. Desenvolvimento na linguagem java, com padrões de
 								projetos, utilizando os frameworks jPOS e jPTS, utilizados no tratamento de mensagens
 								ISO-8583, atuação na aplicação da bandeira Cabal Brasil, análise de fluxo das transações
